# mcp-tela

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN-REVIEW-2.md  DESIGN-REVIEW.md  DESIGN.md  GEMINI.md  INTERFACES.md  LICENSE  PLAN.md  README.md  evidence_monkeypatch_update.md  plan.yaml  pyproject.toml  tela.yaml.example  tela_test.yaml  test_bounded_503.py
.agents/: instructions.md
.github/workflows/: opifex-shared-surface-gates.yml
artifacts/hard_cut/: canonical_capability_token_fixture.json  canonical_tela_list_profiles_fixture.json
artifacts/rem_blockers/: 01_targeted_regressions.out  02_stdio_bridge_pair.out  03_lockfile_identity_probe.out  gate_retest_full_evidence_report.md  lockfile_identity_probe.py
artifacts/rem_bridge_flake/: investigate_timeout_family.md
contracts/: capability_token.schema.json  errors.yaml  mcp_admission_transient_503.schema.json  meta.schema.json  persona_spec.schema.json
design/: opifex-frozen-authority-packet.json
docs/: ADR-003-gateway-capability-only-profiles.md  ADR-004-gateway-startup-state-machine.md  ADR-005-readiness-authority-boundary.md  ADR-006-steady-state-downstream-recovery.md  ADR-007-opifex-canonical-contract-alignment.md  ADR-008-operator-recovery-exposure.md  ADR-009-mcp-bridge-request-lifecycle.md  ADR-010-nested-gateway-ergonomics.md  AGENT_INTERFACE.md  ARCHITECTURE-REFACTOR-ASSESSMENT.md  CI-REPO-LOCAL-SHARED-SURFACE-GATES.md  CONFIRMED-SURFACE-CONTRACT.md  DESIGN.md  INTERFACES.md  MIGRATION-003-capability-only-profiles.md  USAGE.md  dag.md  hard-cutover-canonical-alignment.md  remediation_guardrails_scope_register.md
evidence/: ADR-006-black-box-verification.yaml  ADR-006-deep-conformance-audit.md  ADR-006-deep-conformance-report.yaml  baseline_guard_characterization.md  behavioral_proof_register.md  black_box_verification_report.md  debt_closure_review_basis.md  deep_conformance_audit.md  final_gate_audit.md  full_b_readiness_open_questions_resolution.md  gate_review_report.md  hard_cut_prep_proof_assets.md  hygiene-gate-disposition.md  independent_retest_B1.md  ngw_contract_tests_contract_matrix.md  normalized_blocker_basis.md  operator_p1_surfaces_remediate_typecheck_and_opifex_parity.md  p1_operator_scope_decision_authority_and_source_discovery.md  proof_obligation_contract.md  reclose_architecture_review.md  remediation_guardrails_test_seam_inventory_coverage_register.md  reversal_register.md  review_miss_root_cause_analysis.md  runtime_characterization_snapshot.md  runtime_uncertainty_register.md  spec_conformance_retest_report.md  surface_and_manifest_authority_decision.md  surface_audit_actual_surface.md  surface_taxonomy_verification.md  taxonomy_decision.md  tela_operator_p1_scope_decision_gate_audit.md
scripts/ci/: mcp_tela_shared_surface_gate.py  opifex_authority.py
src/tela/: __init__.py  __main__.py  cli.py
tests/: test_vendor_schema_parity.py
tests/black_box/: test_reaper_black_box.py
tests/contracts/: test_tool_prefix_contract.py
tests/core/: test_adr008_attachment_lifecycle.py  test_authorization_explain_red.py  test_capability_only_profiles.py  test_catalog.py  test_classification.py  test_config.py  test_conflict.py  test_enforcement.py  test_env_field.py  test_errors.py  test_family.py  test_hard_cut_vocab.py  test_models.py  test_nested_gateway_contract.py  test_token.py  test_tool_prefix_contract.py
tests/fixtures/: fastmcp_stdio_server.py  mcp_initialize_hang_server.py  mcp_tools_list_hang_server.py
tests/integration/: test_adr008_attachment_workflows.py  test_audit_levels.py  test_end_to_end.py  test_hot_reload.py  test_mcp_auth_wire.py  test_open_mode.py  test_token_mode_initialize.py
tests/repro/: __init__.py  conftest.py  issue_adr006_black_box_ambiguous_fail_closed.py  issue_adr006_black_box_exhausted_recovery.py  issue_adr006_black_box_healthy_path.py  issue_adr006_black_box_recovery_transparency.py  runtime_snapshot.py  runtime_snapshot_minimal.yaml  soak_cold_start.sh  spec_verify_structural_collapse_liveness.py  test_adr006_runtime_hardening_probes.py  test_blockers.py  test_conn_v2_blackbox.py  test_connect_runtime_liveness.py  test_connection_count_semantics.py  test_disconnect_cleanup.py  test_gate_blocker_regressions.py  test_hard_interrupt.py  (+10 more)
(+114 files in other folders)
