[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tela"
version = "0.1.0"
description = "MCP gateway with role-based tool filtering"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
tela = "tela.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tela"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
