[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tela"
version = "0.1.0"
description = "MCP gateway with role-based tool filtering"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "types-PyYAML>=6.0.12.20250915",
]

[project.scripts]
tela = "tela.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tela"]

[tool.invar.guard]
# Increase escape budget limit to 16: legitimate gateway.py file_size escape + 3 shell_result
# justifications are valid (POSIX exit code, registry accessor, bridge payload helper)
escape_budget_limit = 16

exclude_paths = [
    "tests",
    "test",
    "scripts",
    ".venv",
    "venv",
    ".env",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".git",
    ".hg",
    ".svn",
    "node_modules",
    "dist",
    "build",
    ".tox",
    "templates",
    ".invar/examples",
    ".claude/worktrees",
    ".vectl/worktrees",
    "artifacts",
]

[tool.pytest.ini_options]
markers = [
    "runtime_liveness: black-box tests requiring live tela serve/connect processes and shared lockfile",
]

[dependency-groups]
dev = [
    # `invar-guard==1.20.3` is not published in the default registry; use the
    # published CLI carrier package that provides `uv run invar guard ...`.
    "invar-tools==1.20.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
