[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tela"
version = "0.1.0"
description = "MCP gateway with role-based tool filtering"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "deal>=4.24.6",
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "types-PyYAML>=6.0.12.20250915",
    "starlette>=0.27.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
tela = "tela.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tela"]

[tool.invar.guard]
# Escape hatch budget: file_size (6×3=18) + shell_result (16×3=48) = 66 weighted.
# Shell complexity addressed via @shell_complexity: native markers (not escape hatches).
# Bootstrap exemption: contracts.py defines @pre/@post — cannot self-reference.
escape_budget_limit = 75

# Per-rule expensive budget: file_size (6 hatches), shell_result (16 hatches).
# Set per-project limit to accommodate the largest rule count (shell_result=16).
# shell_too_complex uses native @shell_complexity: markers, not escape hatches.
escape_expensive_per_file = 4
escape_expensive_per_project = 17

# Bootstrap exemption: contracts.py defines @pre/@post decorators; these functions
# cannot carry @pre/@post because they ARE the contract system. Exempt from
# missing_contract checks.
rule_exclusions = [
    { pattern = "**/core/contracts.py", rules = ["missing_contract"] },
]

exclude_paths = [
    "tests",
    "test",
    "scripts",
    ".venv",
    "venv",
    ".env",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".git",
    ".hg",
    ".svn",
    "node_modules",
    "dist",
    "build",
    ".tox",
    "templates",
    ".invar/examples",
    ".claude/worktrees",
    ".vectl/worktrees",
    "artifacts",
]

[tool.pytest.ini_options]
markers = [
    "runtime_liveness: black-box tests requiring live tela serve/connect processes and shared lockfile",
]

[dependency-groups]
dev = [
    # `invar-guard==1.20.3` is not published in the default registry; use the
    # published CLI carrier package that provides `uv run invar guard ...`.
    "invar-tools==1.20.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
